{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 176,
  "lineage": "afc24dfb-0c3b-37d7-e07e-a6235f5d54dd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cs2_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0533a139e02b00be4",
            "arn": "arn:aws:ec2:sa-east-1:695166363681:instance/i-0c0ec536075348a24",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "cs2-ec2-profile",
            "id": "i-0c0ec536075348a24",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "cs2-server-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e3e295670f25e6f6",
            "private_dns": "ip-10-0-1-219.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.219",
            "public_dns": "ec2-18-230-59-130.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.230.59.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0610fae5d95dcc2f1",
                "volume_size": 120,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ec02e4d73b8c0b56",
            "tags": {
              "Name": "CS2-Dedicated-Server"
            },
            "tags_all": {
              "Name": "CS2-Dedicated-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09d0941348a15a144"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_s3_role",
            "aws_key_pair.cs2_key_pair",
            "aws_s3_bucket.cs2_backups",
            "aws_security_group.cs2_sg",
            "aws_subnet.cs2_subnet",
            "aws_vpc.cs2_vpc",
            "data.aws_ami.ubuntu",
            "data.http.my_ip",
            "tls_private_key.cs2_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cs2_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:695166363681:internet-gateway/igw-059c770438622f37f",
            "id": "igw-059c770438622f37f",
            "owner_id": "695166363681",
            "vpc_id": "vpc-0efc762b1fe14993d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cs2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cs2_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:695166363681:route-table/rtb-019d79f7d81a6f891",
            "id": "rtb-019d79f7d81a6f891",
            "owner_id": "695166363681",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-059c770438622f37f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0efc762b1fe14993d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.cs2_igw",
            "aws_vpc.cs2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cs2_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c656a02d6194dcaf",
            "route_table_id": "rtb-019d79f7d81a6f891",
            "subnet_id": "subnet-0ec02e4d73b8c0b56"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.cs2_igw",
            "aws_route_table.cs2_rt",
            "aws_subnet.cs2_subnet",
            "aws_vpc.cs2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cs2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:695166363681:security-group/sg-09d0941348a15a144",
            "description": "Regras de rede para o servidor de CS2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09d0941348a15a144",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Autenticacao Steam",
                "from_port": 27000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 27020
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Steam Auth e RCON",
                "from_port": 27015,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27015
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Trafego de jogo CS2",
                "from_port": 27015,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 27015
              },
              {
                "cidr_blocks": [
                  "179.130.41.241/32"
                ],
                "description": "SSH restrito ao administrador",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "cs2-server-sg",
            "name_prefix": "",
            "owner_id": "695166363681",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0efc762b1fe14993d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cs2_vpc",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cs2_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:695166363681:subnet/subnet-0ec02e4d73b8c0b56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec02e4d73b8c0b56",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "695166363681",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0efc762b1fe14993d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cs2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cs2_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:695166363681:vpc/vpc-0efc762b1fe14993d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0854a61433e59882b",
            "default_route_table_id": "rtb-0c0dec085063891bd",
            "default_security_group_id": "sg-06b2ae9d33e2b4d1a",
            "dhcp_options_id": "dopt-0c0bfb2f54855d4d1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0efc762b1fe14993d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c0dec085063891bd",
            "owner_id": "695166363681",
            "tags": {
              "Name": "cs2-vpc"
            },
            "tags_all": {
              "Name": "cs2-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}